Fixed: Alignment of the objects within home page mobile

--- a/site-sass/base/grid.scss
+++ b/site-sass/base/grid.scss
@@ -343,7 +343,9 @@ $toast-pulls: true !default;
 
 .level-elements {
 	/*@include align-items(center);*/
-
+  @include mq($until:desktop) {
+    flex-direction: column;
+  }
 }
 
 
